<resources>
    <string name="app_name">PaintVisualizer</string>
    <string name="hint_firestname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_mail">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_userpassword">Password</string>
    <string name="action_settings">Setting</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="hint_username_val">Username</string>
    <string name="hint_password_val">Password</string>
    <string name="hint_Con_password_val">Confirm Password</string>
    <string name="hint_CompanyName_val">Company Name</string>
    <string name="hint_date_of_birth_val">Date Of Birth</string>
    <string name="hint_PhoneNo_val">Phone Number</string>
    <string name="hint_email_address_val">Email Address</string>
    <string name="description_pref">Lorem lpsum is simply dummy text of the printing and Contrary to popular belief,Lorem lpsum is not simply random text. <b> <font color='black'>More</font></b> </string>
    <string name="que">Question</string>
    <string name="error_player">Error Player</string>
</resources>
